poke/testsuite/poke.pkl/offset-type-diag-2.pk
/* { dg-do compile } */

defun foo = (offset<byte[],byte> input, /* { dg-error "shall be integral" } */
             int len) int:
{
    defvar ret = 0;
    return ret;
}
